--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -21,25 +21,26 @@
         android:id="@+id/textViewT"
         android:layout_gravity="center_horizontal|top"
         android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/button"
-        android:layout_toStartOf="@+id/button" />
+        android:layout_centerInParent="true" />
 
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
-        android:layout_centerInParent="true"
-        android:layout_gravity="center" />
     <com.example.bunhan.rxvideofromlinkit7688.JoystickView
-        android:id="@+id/joystickView"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:id="@+id/joystickViewRight"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
 
         android:layout_weight="0.10" />
+    <com.example.bunhan.rxvideofromlinkit7688.JoystickView
+        android:id="@+id/joystickViewLeft"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+
+        android:layout_weight="0.10"
+        android:layout_alignTop="@+id/joystickViewRight"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -50,6 +51,5 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/button"
-        android:layout_alignEnd="@+id/button" />
+        android:layout_centerInParent="true" />
 </RelativeLayout>
